# rust-solana-NFT-challenge

./: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: mint-nft.ts
frontend/: config-overrides.js  craco.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  my-metadata.json
frontend/src/idl/: rust_solana_nft_challenge.json
programs/rust-solana-nft-challenge/: Cargo.toml
programs/rust-solana-nft-challenge/src/: lib.rs
tests/: rust-solana-nft-challenge.ts
